# ml-zoomcamp

./: .gitignore  pyproject.toml
ml_zoomcamp/02-regression/: 02-hw.ipynb
ml_zoomcamp/03-classification/: HW3.ipynb
