[tool.poetry]
name = "ml-zoomcamp"
version = "0.1.0"
description = ""
authors = ["morsondak <mor.sondak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
